synopsis: "Implementation of the λΠ-calculus modulo rewriting ─ LSP server"
description:
"""
Lambdapi is an implementation of the λΠ-calculus modulo rewriting, that is
mostly compatible with Dedukti (https://github.com/Deducteam/Dedukti).

This package provides a Language Server Protocol helper for IDEs to
check lambdapi files.
"""
opam-version: "2.0"
maintainer: "dedukti-dev@inria.fr"
authors: "Emilio Jesús Gallego Arias <e@x80.org>"
homepage: "https://github.com/rlepigre/lambdapi"
bug-reports: "https://github.com/rlepigre/lambdapi/issues"
dev-repo: "https://github.com/ejgallego/lambdapi.git"
license: "CeCILL"

depends: [
  "ocaml"       {         >= "4.04.0" }
  "dune"        { build & >= "1.3.0"  }
  "lambdapi"  # { = version }
  "yojson"
  "cmdliner"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
