(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (modules :standard \ lambdapi pure)
 (preprocess (per_module ((action (run pa_ocaml %{input-file})) parser)))
 (libraries unix timed bindlib earley.core why3))

(library
 (name pure)
 (public_name lambdapi.pure)
 (inline_tests)
 (modules pure)
 (preprocess (pps ppx_inline_test))
 (libraries core))

(executable
 (name lambdapi)
 (public_name lambdapi)
 (modules lambdapi)
 (libraries lambdapi.core))

(ocamllex legacy_lexer)
(menhir
 (flags (--external-tokens Legacy_lexer))
 (modules menhir_parser))
