(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (modules :standard \ lambdapi)
 (preprocess (per_module ((action (run pa_ocaml %{input-file})) parser)))
 (libraries unix timed bindlib earley.core why3))

(executable
 (name lambdapi)
 (public_name lambdapi)
 (modules lambdapi)
 (libraries lambdapi.core lambdapi.lsp))

(ocamllex legacy_lexer)
(menhir
 (flags (--external-tokens Legacy_lexer))
 (modules menhir_parser))
