(tests
 (names utils ok_ko)
 (deps
  (glob_files OK/parsing/*.lp)
  (glob_files OK/parsing/*.dk)
  (glob_files OK/import/*.lp)
  (glob_files OK/import/*.dk)
  (glob_files OK/inductive/*.lp)
  (glob_files OK/inductive/*.dk)
  (glob_files OK/set_option/*.lp)
  (glob_files OK/set_option/*.dk)
  (glob_files OK/queries/*.lp)
  (glob_files OK/queries/*.dk)
  (glob_files OK/symbol/*.lp)
  (glob_files OK/symbol/*.dk)
  (glob_files OK/tactic/*.lp)
  (glob_files OK/tactic/*.dk)
  (glob_files OK/scoping/*.lp)
  (glob_files OK/scoping/*.dk)
  (glob_files OK/rewriting/*.lp)
  (glob_files OK/rewriting/*.dk)
  (glob_files OK/examples/*.lp)
  (glob_files OK/examples/*.dk)

  (glob_files KO/parsing/*.lp)
  (glob_files KO/parsing/*.dk)
  (glob_files KO/import/*.lp)
  (glob_files KO/import/*.dk)
  (glob_files KO/inductive/*.lp)
  (glob_files KO/inductive/*.dk)
  (glob_files KO/set_option/*.lp)
  (glob_files KO/set_option/*.dk)
  (glob_files KO/queries/*.lp)
  (glob_files KO/queries/*.dk)
  (glob_files KO/symbol/*.lp)
  (glob_files KO/symbol/*.dk)
  (glob_files KO/tactic/*.lp)
  (glob_files KO/tactic/*.dk)
  (glob_files KO/scoping/*.lp)
  (glob_files KO/scoping/*.dk)
  (glob_files KO/rewriting/*.lp)
  (glob_files KO/rewriting/*.dk)
  (glob_files KO/examples/*.lp)
  (glob_files KO/examples/*.dk)

  (glob_files KO/*)
  (glob_files OK/*.lp)
  (glob_files OK/*.dk)
  (glob_files "OK/a b/*.lp")
  (glob_files KO/*.lp)
  (glob_files KO/*.dk)
  lambdapi.pkg)
 (libraries lambdapi.core lambdapi.parsing lambdapi.handle lambdapi.tool
            alcotest))
