(tests
 (names utils ok_ko rewriting purity)
 (deps
  (glob_files OK/*.lp)
  (glob_files OK/*.dk)
  (glob_files "OK/a b/*.lp")
  (glob_files KO/*.lp)
  (glob_files KO/*.dk)
  lambdapi.pkg)
 (libraries lambdapi.core lambdapi.parsing lambdapi.handle lambdapi.tool
            alcotest))

(rule
 (alias runtest)
  (action (run why3 config detect)))
