(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml unix.cma %{dep:../../misc/gen_version.ml})))
 (mode fallback))

(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (modules :standard)
 (libraries lambdapi.common lambdapi.lplib pratter why3))
