(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml -I +unix unix.cma %{dep:../../misc/gen_version.ml})))
 (mode fallback))

(library
 (name core)
 (public_name lambdapi.core)
 (synopsis "LambdaPi interactive theorem prover [core]")
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (modules :standard)
 (libraries yojson lambdapi.common lambdapi.lplib pratter why3 unix))
