(library
 (name parsing)
 (public_name lambdapi.parsing)
 (modules :standard)
 (preprocess (pps sedlex.ppx))
 (libraries camlp-streams lambdapi.core pratter sedlex sedlex.ppx lambdapi.common)
 (flags -w +3))

(ocamllex dkLexer)

(menhir (flags --explain --external-tokens DkTokens) (modules dkParser))
