(library
 (name parsing)
 (public_name lambdapi.parsing)
 (modules :standard)
 (preprocess (pps sedlex.ppx))
 (libraries camlp-streams lambdapi.core menhirLib pratter sedlex sedlex.ppx lambdapi.common)
 (flags -w +3))

; (menhir (flags --explain --external-tokens LpLexer) (modules lpParser))

; (menhir (flags --explain --external-tokens RocqLexer) (modules rocqParser))

(ocamllex dkLexer)

(menhir (flags --explain --external-tokens DkTokens) (modules dkParser))
