(rule
 (target unary.lpo)
 (deps   unary.lp ../bool.lpo)
 (action (run lambdapi --lib-root ../.. --verbose 0 --gen-obj unary.lp)))

(rule
 (target binary.lpo)
 (deps   binary.lp ../bool.lpo)
 (action (run lambdapi --lib-root ../.. --verbose 0 --gen-obj binary.lp)))

(install
 (section lib)
 (files
  (unary.lp   as lib_root/std/nat/unary.lp)
  (binary.lp  as lib_root/std/nat/binary.lp)
  (unary.lpo  as lib_root/std/nat/unary.lpo)
  (binary.lpo as lib_root/std/nat/binary.lpo)))

